changes to HTML and README

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <!--    Guide Section    -->
         <div id="guide">
             <h2>Instructions</h2>
-            <h4>1. You will have 20 seconds to answer each question.</h4>
+            <h4>1. You will have 30 Seconds to answer all questions.</h4>
             <h4>2. Once you select your answer. It can't be undone.</h4>
-            <h4>3. You'll get 1 Point for each correct answer.</h4>
+            <h4>3. You'll get 1 Point for each correct answer, but you will lose 2 seconds for each wrong one.</h4>
             <h4>4. You can't exit from the Quiz while you are playing.</h4>
             <div id="button">
                 <button id="exit">Exit</button>
